--- a/app/employee_management_ui/webapp/view/App.view.xml
+++ b/app/employee_management_ui/webapp/view/App.view.xml
@@ -1,8 +1,71 @@
-<mvc:View xmlns:tnt="sap.tnt" controllerName="sap.deloitte.employeemanagement.employeemanagementui.controller.App"
-    xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
-    xmlns="sap.m">
+<mvc:View
+    xmlns:tnt="sap.tnt"
+    controllerName="sap.deloitte.employeemanagement.employeemanagementui.controller.App"
+    xmlns:mvc="sap.ui.core.mvc"
+    displayBlock="true"
+    xmlns="sap.m"
+>
     <tnt:ToolPage id="_IDGenToolPage1">
-    <tnt:header>
-    </tnt:header>
+        <tnt:header>
+            <tnt:ToolHeader id="_IDGenToolHeader1">
+                <Button
+                    id="sideNavigationToggleButton"
+                    icon="sap-icon://menu2"
+                    type="Transparent"
+                    press=".onSideNavButtonPress"
+                    tooltip="{i18n>collpaseMenuButtonText}"
+                >
+                    <layoutData>
+                        <OverflowToolbarLayoutData id="_IDGenOverflowToolbarLayoutData1" priority="NeverOverflow" />
+                    </layoutData>
+                </Button>
+                <Title id="_IDGenTitle1"
+					text="{i18n>appTitle}"
+					level="H2"/>
+                <ToolbarSpacer id="_IDGenToolbarSpacer1"/>
+				<Button
+					id="errorButton"
+					icon="sap-icon://message-popup"
+					visible="{= ${alerts>/alerts/errors}.length === 0 ? false : true }"
+					type="Transparent"
+					press=".onMessagePopoverPress"
+					tooltip="{i18n>errorButtonTooltip}">
+					<layoutData>
+						<OverflowToolbarLayoutData id="_IDGenOverflowToolbarLayoutData2" closeOverflowOnInteraction="false"/>
+					</layoutData>
+				</Button>
+				<Button
+					id="notificationButton"
+					icon="sap-icon://ui-notifications"
+					visible="{= ${alerts>/alerts/notifications}.length === 0 ? false : true }"
+					type="Transparent"
+					press=".onNotificationPress"
+					tooltip="{i18n>notificationButtonTooltip}">
+					<layoutData>
+						<OverflowToolbarLayoutData id="_IDGenOverflowToolbarLayoutData3" closeOverflowOnInteraction="false"/>
+					</layoutData>
+				</Button>
+				<Button
+					id="userButton"
+					text="{i18n>userName}"
+					type="Transparent"
+					press=".onUserNamePress">
+					<layoutData>
+						<OverflowToolbarLayoutData id="_IDGenOverflowToolbarLayoutData4" closeOverflowOnInteraction="false"/>
+					</layoutData>
+				</Button>
+            </tnt:ToolHeader>
+        </tnt:header>
+        <tnt:sideContent>
+        <tnt:SideNavigation id="_IDGenSideNavigation1" expanded="true">
+        <tnt:NavigationList id="_IDGenNavigationList1">
+            <tnt:NavigationListItem id="_IDGenNavigationListItem1" text="Home" icon="sap-icon://home" expanded="true" />
+            <tnt:NavigationListItem id="_IDGenNavigationListItem2" text="Needs" icon="sap-icon://activity-items" expanded="false"> 
+                <tnt:NavigationListItem id="_IDGenNavigationListItem2a" text="Create Need" icon="sap-icon://add-activity" />
+                <tnt:NavigationListItem id="_IDGenNavigationListItem2b" text="Assign Need" icon="sap-icon://activity-individual" />
+            </tnt:NavigationListItem>
+        </tnt:NavigationList>
+        </tnt:SideNavigation>
+        </tnt:sideContent>
     </tnt:ToolPage>
 </mvc:View>
