Final changes for postPMG by Aviral

--- a/app/employee_management_ui/webapp/view/Need.view.xml
+++ b/app/employee_management_ui/webapp/view/Need.view.xml
@@ -194,7 +194,7 @@
 				<subSections>
 					<ObjectPageSubSection title="Post-PMG" showTitle="false">
 						<blocks>
-							<m:VBox> </m:VBox>
+						<info:postPMG />
 						</blocks>
 					</ObjectPageSubSection>
 				</subSections>
