--- a/app/employee_management_ui/webapp/view/Need.view.xml
+++ b/app/employee_management_ui/webapp/view/Need.view.xml
@@ -147,7 +147,7 @@
 								</m:HBox>
 	                   			<m:HBox width="200px" class="AuthorizationList" alignItems="Start" alignContent="Center" justifyContent="Center">
 									<m:VBox>
-										<m:Avatar src="./test-resources/sap/uxap/images/imageID_275314.png" class="sapUiSmallMarginEnd" />
+										<m:Avatar src="https://sapui5.hana.ondemand.com/test-resources/sap/uxap/images/imageID_275314.png" class="sapUiSmallMarginEnd" />
 									</m:VBox>
 									<m:VBox>
 										<m:Title text="Seneca Smith" wrapping="true"/>
@@ -160,7 +160,7 @@
 								</m:HBox>
 								<m:HBox id="_IDGenHBox1" width="200px" class="AuthorizationList" alignItems="Start" alignContent="Center" justifyContent="Center">
 									<m:VBox id="_IDGenVBox1">
-										<m:Avatar id="_IDGenAvatar1" src="./test-resources/sap/uxap/images/imageID_275314.png" class="sapUiSmallMarginEnd" />
+										<m:Avatar id="_IDGenAvatar1" src="https://sapui5.hana.ondemand.com/test-resources/sap/uxap/images/imageID_275314.png" class="sapUiSmallMarginEnd" />
 									</m:VBox>
 									<m:VBox id="_IDGenVBox2" >
 										<m:Title id="_IDGenTitle1" text="Mary Clark" wrapping="true"/>
@@ -173,7 +173,7 @@
 								</m:HBox>
 								<m:HBox width="200px" class="AuthorizationList" alignItems="Start" alignContent="Center" justifyContent="Center">
 									<m:VBox>
-										<m:Avatar src="./test-resources/sap/uxap/images/imageID_275314.png" class="sapUiSmallMarginEnd" />
+										<m:Avatar src="https://sapui5.hana.ondemand.com/test-resources/sap/uxap/images/imageID_275314.png" class="sapUiSmallMarginEnd" />
 									</m:VBox>
 									<m:VBox>
 										<m:Title text="Tim G Carey" wrapping="true"/>
