--- a/app/employee_management_ui/webapp/view/App.view.xml
+++ b/app/employee_management_ui/webapp/view/App.view.xml
@@ -55,7 +55,7 @@
             <tnt:NavigationListItem id="_IDGenNavigationListItem1" text="Home" icon="sap-icon://home" expanded="true" href="#/home" key="home" />
             <tnt:NavigationListItem id="_IDGenNavigationListItem2" text="Needs" icon="sap-icon://activity-items" href="#/need" key="need" /> 
             <!-- <tnt:NavigationListItem id="_IDGenNavigationListItem2a" text="Create Need" icon="sap-icon://add-activity" href="#/create-needs" /> -->
-            <tnt:NavigationListItem id="_IDGenNavigationListItem4" text="Extended Team’s Needs" icon="sap-icon://collaborate" />
+            <tnt:NavigationListItem id="_IDGenNavigationListItem4" text="My Tasks" icon="sap-icon://activity-assigned-to-goal" href="#/my-tasks" key="my-tasks" />
         </tnt:NavigationList>
         </tnt:SideNavigation> 
         </tnt:sideContent>
