Added My Tasks View Navigation

--- a/app/employee_management_ui/webapp/view/Tasks.view.xml
+++ b/app/employee_management_ui/webapp/view/Tasks.view.xml
@@ -32,7 +32,7 @@
 					<f:content>
 						<List items="{/Tasks}">
 							<ObjectListItem title="{title}"
-								type="Active"
+								type="Navigation"
 								press=""
 								number="{date}"
 								numberUnit="{message}" >
