Completed Notify Employee

--- a/app/employee_management_ui/webapp/css/style.css
+++ b/app/employee_management_ui/webapp/css/style.css
@@ -55,3 +55,12 @@
 .sapSuiteUiCommonsTimeline {
     max-width: 90% !important;
 }
+.headerBgColor{
+    background-color: rgb(227, 24, 24) !important;
+}
+.headerTitle{
+    color: #f5f4f4;
+}
+.iconColor{
+    color: blue;
+}
