--- a/app/employee_management_ui/webapp/css/style.css
+++ b/app/employee_management_ui/webapp/css/style.css
@@ -55,3 +55,9 @@
 .sapSuiteUiCommonsTimeline {
     max-width: 90% !important;
 }
+
+.myTitle {
+    background-color: #e63b3b; ;
+    color: white;
+    width: 100%
+}
