Commit after manual file change style,appview i18

--- a/app/employee_management_ui/webapp/css/style.css
+++ b/app/employee_management_ui/webapp/css/style.css
@@ -55,3 +55,21 @@
 .sapSuiteUiCommonsTimeline {
     max-width: 90% !important;
 }
+.headerBgColor{
+    background-color: #0C479D !important;
+}
+.headerTitle{
+    color: #f5f4f4;
+}
+.iconColor .sapUiIcon{
+    color: #f5f4f4 !important;
+    outline-color: #f5f4f4;
+}
+
+.iconColor .sapUiIcon:hover{
+    color: #0C479D !important;
+}
+
+.iconColor:hover .sapUiIcon{
+    color: #0C479D !important;
+}
