--- a/app/employee_management_ui/webapp/view/Notification.view.xml
+++ b/app/employee_management_ui/webapp/view/Notification.view.xml
@@ -1,5 +1,5 @@
 <mvc:View
-    controllerName="sap.deloitte.employeemanagement.employeemanagementui.controller.ExportControl"
+    controllerName="sap.deloitte.employeemanagement.employeemanagementui.controller.Notification"
     xmlns:mvc="sap.ui.core.mvc"
     xmlns="sap.m"
     xmlns:f="sap.f"
@@ -11,7 +11,7 @@
             <f:DynamicPageTitle>
                 <f:heading>
                     <Title
-                        text="LITNA Check and Export Controls"
+                        text="Notify Employee: Heather (Heather) Renee Wilcott"
                     />
                 </f:heading>
                 <f:expandedContent>
